--- a/booking-lapangan/css/dashboard.css
+++ b/booking-lapangan/css/dashboard.css
@@ -9,7 +9,7 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    background-color: #000000; /* Warna background hitam */
+    background-color: #000000;
 }
 
 .container {
